# Monster-Controller

./: README.md
ArduinoSoftware/: ArduinoSoftware.ino
C#/MonsterController/: App.axaml  App.axaml.cs  EighthHeightConverter.cs  HalfHeightConverter.cs  MonsterController.csproj  MonsterController.sln  PortCom.cs  Program.cs  ViewLocator.cs  app.manifest  publish.ps1
C#/MonsterController/MonsterController/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  MonsterController.csproj
C#/MonsterController/MonsterController/Components/: _Imports.razor
C#/MonsterController/MonsterController/Components/Layout/: NavMenu.razor
C#/MonsterController/MonsterController/Components/Pages/: Home.razor
C#/MonsterController/MonsterController/wwwroot/: index.html
C#/MonsterController/MonsterController/wwwroot/css/: app.css
C#/MonsterController/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
C#/MonsterController/Views/: MainWindow.axaml  MainWindow.axaml.cs
Node.js/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
Python/: Cargo.toml  console.py  gui.py
Python/src/: main.rs
Rust/: Cargo.toml
Rust/src/: main.rs
Tauri/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
Tauri/public/: index.html  manifest.webmanifest
Tauri/src/: App.css  App.tsx  index.tsx  main.tsx
Tauri/src-tauri/: Cargo.toml  tauri.conf.json
Tauri/src-tauri/.cargo/: config.toml
Tauri/src-tauri/src/: lib.rs  main.rs
Web/: index.html  package.json
Web/src/: App.css  App.tsx  main.css  main.tsx
Windows Only (C++)/Console/Console/: Console.cpp
Windows Only (C++)/WinForms/Window Control/: MainWin.cpp  Resource.aps  Window Control.vcxproj  Window Control.vcxproj.filters  Window.h  resource.h
Windows Only/C#/: .gitignore  C#.sln
Windows Only/C#/C#/: C#.csproj  MainForm.Designer.cs  MainForm.cs  PortCom.cs  Program.cs
Windows Only/C++/Console/: .gitignore  Console.sln
Windows Only/C++/Console/Console/: Console.vcxproj
Windows Only/C++/WinForms/: Monsters Revamped.sln
Windows Only/C++/WinForms/Window Control/: MainWin.cpp  Resource.rc  Window Control.filters
(+1 files in other folders)
