[package]
name = "monster-controller"
version = "0.0.9"
description = "Monster Controller"
authors = ["JJ"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.3.0"
dialog = "0.3.0"
serial2 = "0.2.26"

[target.'cfg(windows)'.dependencies]
wmi = "0.13.3"
winapi = { version = "0.3.9", features = ["fileapi", "handleapi", "winbase", "winnt", "ioapiset"] }

[target.'cfg(unix)'.dependencies]
libudev-sys = "0.1.4"
nix = { version = "0.29.0", default-features = false, features = ["fs", "ioctl", "poll", "signal", "term"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
