[package]
name = "monster-controller"
version = "0.1.0"
description = "Monster Controller"
authors = ["JJ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "monster_controller_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.4.0"
serial2 = "0.2.26"
tungstenite = "0.23.0"
local-ip-address = "0.6.1"

[target.'cfg(windows)'.dependencies]
wmi = "0.13.3"

# [target.'cfg(unix)'.dependencies]
# libc = "0.2.155"
# libudev = "0.3.0"
